Added Top level comments and finished the structure except contact me section

--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
+<!-- Start of Header section -->
 <head>
   <meta charset="utf-8">
   <title>My Resume</title>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" /> -->
+
+  <!-- Bootstrap CDN link -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+
+  <!-- Font Awesome link -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"crossorigin="anonymous" /> -->
+  <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" /> -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css" integrity="sha512-1hsteeq9xTM5CX6NsXiJu3Y/g+tj+IIwtZMtTisemEv3hx+S9ngaW4nryrNcPM4xGzINcKbwUJtojslX2KG+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.0/css/all.min.css" integrity="sha512-gRH0EcIcYBFkQTnbpO8k0WlsD20x5VzjhOA1Og8+ZUAhcMUCvd+APD35FJw3GzHAP3e+mP28YcDJxVr745loHw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.css" integrity="sha512-E+53kXnJyuZFSz75xSmTfCpUNj3gp9Bd80TeQQMTPJTVWDRHPOpEYczGwWtsZXvaiz27cqvhdH8U+g/NMYua3A==" crossorigin="anonymous"
+    referrerpolicy="no-referrer" />
+
+  <!-- Local Bootstrap Link -->
   <!-- <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css" /> -->
   <link rel="stylesheet" href="bootstrap-5.2.0-dist/css/bootstrap.css" />
-  <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-  <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="styles.css">
-</head>
 
+  <!-- Local JQuery Link -->
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+
+  <!-- Local JS link -->
+  <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+
+  <!-- Local CSS link -->
+  <link rel="stylesheet" href="styles.css">
+
+</head>
+<!-- End of Header section -->
+<!-- ************************************************************************************************************************************************************************************************ -->
+<!-- Start of Body Section -->
 <body>
+  <!-- *****************Navigation Bar***************** -->
   <section id="Navigation_Bar">
     <div class="nvg_bar ">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -28,6 +52,15 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#Skills_Overview">Skills Overview</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#Professional_Experience">Professional Experience</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#Internships">Internships</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#Skills">Skills</a>
@@ -46,7 +79,7 @@
               </li>
               <li class="nav-item">
                 <div class="contactMe_nav">
-                  <a class="nav-link" href="#Contact_me">Contact me</a>
+                  <a class="nav-link" href="#Contact_Me">Contact me</a>
                 </div>
               </li>
 
@@ -65,7 +98,7 @@
       </div>
     </div>
   </section>
-
+<!-- *****************Profile***************** -->
   <section id="Profile">
     <div class="profile_title">
       <h2>Profile</h2>
@@ -90,7 +123,70 @@
       <span>Bangalore</span>
     </div>
   </section>
+<!-- *****************Skills Overview***************** -->
+  <section id="Skills_Overview">
+    <div class="Skills_Overview_div">
+      <h2>Skills Overview </h2>
+      <div class="Skills_Overview_element">
+        <i class="fa-solid fa-window-maximize"></i>
+        <h5>Web Development</h5>
+      </div>
+      <div class="Programming">
+        <i class="fa-solid fa-laptop-code"></i>
+        <h5>Programming</h5>
+      </div>
+      <div class="Database">
+        <i class="fa-solid fa-database"></i>
+        <h5>Database</h5>
+      </div>
+      <div class="Cloud">
+        <i class="fa-solid fa-cloud"></i>
+        <h5>Cloud</h5>
+      </div>
+      <div class="Testing">
+        <i class="fa-solid fa-screwdriver-wrench"></i>
+        <h5>Testing</h5>
+      </div>
+    </div>
+  </section>
 
+<!-- *****************Professional Experience***************** -->
+  <section id="Professional_Experience">
+    <div class="Professional_Experience_div">
+      <h2>Professional Experience</h2>
+      <h3>Qualitest India Pvt Ltd | Siemens Healthineers Private Limited</h3>
+      <h4>Software Developer</h4>
+      <h6>August 2021 - Current | Bangalore</h6>
+      <ul><span>Key Learnings</span>
+        <li>Automation Testing of a multi-functional booking website</li>
+        <li>Development of automation scripts for various test cases without the use of user interface </li>
+        <li>Involved in development and improvisation of the tools used in the application </li>
+        <li>Got and idea about how the functionalities can be improved and altered, so that the application is improvised and compatible</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- *****************Internships******************** -->
+  <section id="Internships">
+    <div class="Internships_div">
+      <h2>Internships</h2>
+      <h3>Advanced Digital Switching Systems and Optical Fiber Communication</h3>
+      <h4>BSNL, RTTC | Mysore</h4>
+      <ul><span>Key Learnings</span>
+        <li>Basic Building blocks and functionalities and Markov chain analysis for hardware reliability.</li>
+        <li>Enhanced root-cause and metrics model methodology for improving software reliability.</li>
+        <li>Various aspects of digital switching Systems, architecture, internal communications and controls.</li>
+      </ul>
+      <h3>Sensors in Wheel and Axel Manufacturing</h3>
+      <h4>Rail Wheel Factory (RWF) | Bengaluru</h4>
+      <ul><span>Key Learnings</span>
+        <li>Brief working of automated machines used in the manufacturing process.</li>
+        <li>Pressure sensors (Brinell Ball) used to measure the hardness of the wheel.</li>
+        <li>Temperature sensors used in heating furnaces.</li>
+      </ul>
+    </div>
+  </section>
+<!--*****************Skills*****************  -->
   <section id="Skills">
     <div>
       <h2>Skills</h2>
@@ -209,7 +305,7 @@
             <i class="far fa-star"></i>
           </span>
         </li>
-        <li><span class="skill_title"> MongoDB</span>
+        <!-- <li><span class="skill_title"> MongoDB</span>
           <span class="skill_score">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -217,8 +313,8 @@
             <i class="fas fa-star"></i>
             <i class="far fa-star"></i>
           </span>
-        </li>
-        <li><span class="skill_title"> Mongoose</span>
+        </li> -->
+        <!-- <li><span class="skill_title"> Mongoose</span>
           <span class="skill_score">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -226,8 +322,8 @@
             <i class="fas fa-star"></i>
             <i class="far fa-star"></i>
           </span>
-        </li>
-        <li><span class="skill_title"> React.js</span>
+        </li> -->
+        <!-- <li><span class="skill_title"> React.js</span>
           <span class="skill_score">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -235,18 +331,20 @@
             <i class="fas fa-star"></i>
             <i class="far fa-star"></i>
           </span>
-        </li>
-        <li><span class="skill_title"> RestAssured</span>
+        </li> -->
+        <!-- <li><span class="skill_title"> RestAssured</span>
           <span class="skill_score">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
           </span>
-        </li>
+        </li> -->
       </ul>
     </div>
   </section>
-
+<!-- *****************Education***************** -->
   <section id="Education">
     <div class="MEng">
       <h2>Education</h2>
@@ -285,7 +383,7 @@
     </div>
 
   </section>
-
+<!-- *****************Academic Projects***************** -->
   <section id="Academic_Projects">
     <h2>Academic Projects</h2>
     <div class="DCU">
@@ -312,6 +410,7 @@
 
   </section>
 
+<!-- *****************Additional Information***************** -->
   <section id="Additional_Info">
     <h2>Additional Information</h2>
     <div class="Publication">
@@ -338,16 +437,55 @@
 
     </div>
 
+<!-- *****************Certifications***************** -->
   </section>
-  <section class="Certifications">
+  <section id="Certifications">
     <h2>Certifications</h2>
+    <div class="Certifications_div">
 
+      <div class="Certifications_element">
+        <i class="fa-solid fa-window-maximize"></i>
+        <h5>The Complete Software Testing Bootcamp</h5>
+      </div>
+      <div class="Certifications_element">
+        <i class="fa-solid fa-window-maximize"></i>
+        <h5>ISTQB Foundation Level Complete Training</h5>
+      </div>
+      <div class="Certifications_element">
+        <i class="fa-solid fa-window-maximize"></i>
+        <h5>The Complete Java Certification Course</h5>
+      </div>
+      <div class="Certifications_element">
+        <i class="fa-solid fa-window-maximize"></i>
+        <h5>Microsoft SQL for Beginners</h5>
+      </div>
+      <div class="Certifications_element">
+        <i class="fa-solid fa-window-maximize"></i>
+        <h5>HTML Tutorial</h5>
+      </div>
+      <div class="Certifications_element">
+        <i class="fa-solid fa-window-maximize"></i>
+        <h5>CSS Tutorial</h5>
+      </div>
+      <div class="Certifications_element">
+        <i class="fa-solid fa-window-maximize"></i>
+        <h5>Selenium WebDriver with Java -Basics to Advanced+Frameworks</h5>
+      </div>
+      <div class="Certifications_element">
+        <i class="fa-solid fa-window-maximize"></i>
+        <h5>Learn Python Programming Masterclass</h5>
+      </div>
+
+    </div>
+
+<!-- *****************Contact Me***************** -->
   </section>
-  <section class="Contact_me">
+  <section id="Contact_Me">
     <h2>Contact Me</h2>
 
   </section>
 
 </body>
-
+<!-- End of Body Section -->
+<!-- ************************************************************************************************************************************************************************************************ -->
 </html>
