--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <!-- Start of Header section -->
+
 <head>
   <meta charset="utf-8">
   <title>My Resume</title>
@@ -18,6 +19,14 @@
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.0/css/all.min.css" integrity="sha512-gRH0EcIcYBFkQTnbpO8k0WlsD20x5VzjhOA1Og8+ZUAhcMUCvd+APD35FJw3GzHAP3e+mP28YcDJxVr745loHw==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.css" integrity="sha512-E+53kXnJyuZFSz75xSmTfCpUNj3gp9Bd80TeQQMTPJTVWDRHPOpEYczGwWtsZXvaiz27cqvhdH8U+g/NMYua3A==" crossorigin="anonymous"
     referrerpolicy="no-referrer" />
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mina&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mali:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 
   <!-- Local Bootstrap Link -->
   <!-- <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css" /> -->
@@ -36,14 +45,15 @@
 <!-- End of Header section -->
 <!-- ************************************************************************************************************************************************************************************************ -->
 <!-- Start of Body Section -->
+
 <body>
   <!-- *****************Navigation Bar***************** -->
   <section id="Navigation_Bar">
-    <div class="nvg_bar ">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+    <div class="nvg_bar">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid brandName">
           <a class="navbar-brand" href="#">
-            <img src="title_icon.png" alt="" width="30" height="24">Nikhil M N
+            Nikhil M N
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,10 +64,10 @@
                 <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#Skills_Overview">Skills Overview</a>
+                <a class="nav-link navElement" aria-current="page" href="#Skills_Overview">Skills Overview</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#Professional_Experience">Professional Experience</a>
+                <a class="nav-link navElement" aria-current="page" href="#Professional_Experience">Professional Experience</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#Internships">Internships</a>
@@ -69,18 +79,16 @@
                 <a class="nav-link" href="#Education">Education</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Academic_Projects">Academic Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#Additional_Info">Additional Info</a>
+                <a class="nav-link" href="#Academic_Projects">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#Certifications">Certifications</a>
               </li>
               <li class="nav-item">
-                <div class="contactMe_nav">
-                  <a class="nav-link" href="#Contact_Me">Contact me</a>
-                </div>
+                <a class="nav-link navElement" href="#Additional_Info">Additional Info</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link navElement" href="#Contact_Me">Contact me</a>
               </li>
 
             </ul>
@@ -93,16 +101,26 @@
         <img src="" alt="">
       </div>
       <div class="nvg_body_txt">
-        <h3>Hey, I'm </h3>
-        <h1>Nikhil M N</h1>
+        <span class="line1">
+          Hey, I'm
+        </span>
+        <span class="line2">
+          Nikhil M N
+        </span>
+        <span class="line3">
+          I am a full-stack Developer
+        </span>
+        <span>
+          <!-- <img class="myPic" src="my_pic.jpg" alt=""> -->
+          <img class="myPic" src="my_pic2.jpg" alt="">
+        </span>
       </div>
     </div>
   </section>
-<!-- *****************Profile***************** -->
+  <!-- *****************Profile***************** -->
   <section id="Profile">
     <div class="profile_title">
       <h2>Profile</h2>
-      <h4>I am a full-stack Developer</h4>
     </div>
     <div class="profile_summary">
       <p>I have a good Knowledge on Web Designing. I am familiar with various Programming Languages like Java, Python, C#, JavaScript, C++ etc.
@@ -123,7 +141,7 @@
       <span>Bangalore</span>
     </div>
   </section>
-<!-- *****************Skills Overview***************** -->
+  <!-- *****************Skills Overview***************** -->
   <section id="Skills_Overview">
     <div class="Skills_Overview_div">
       <h2>Skills Overview </h2>
@@ -150,7 +168,7 @@
     </div>
   </section>
 
-<!-- *****************Professional Experience***************** -->
+  <!-- *****************Professional Experience***************** -->
   <section id="Professional_Experience">
     <div class="Professional_Experience_div">
       <h2>Professional Experience</h2>
@@ -186,7 +204,7 @@
       </ul>
     </div>
   </section>
-<!--*****************Skills*****************  -->
+  <!--*****************Skills*****************  -->
   <section id="Skills">
     <div>
       <h2>Skills</h2>
@@ -344,7 +362,7 @@
       </ul>
     </div>
   </section>
-<!-- *****************Education***************** -->
+  <!-- *****************Education***************** -->
   <section id="Education">
     <div class="MEng">
       <h2>Education</h2>
@@ -383,7 +401,7 @@
     </div>
 
   </section>
-<!-- *****************Academic Projects***************** -->
+  <!-- *****************Academic Projects***************** -->
   <section id="Academic_Projects">
     <h2>Academic Projects</h2>
     <div class="DCU">
@@ -410,7 +428,7 @@
 
   </section>
 
-<!-- *****************Additional Information***************** -->
+  <!-- *****************Additional Information***************** -->
   <section id="Additional_Info">
     <h2>Additional Information</h2>
     <div class="Publication">
@@ -437,7 +455,7 @@
 
     </div>
 
-<!-- *****************Certifications***************** -->
+    <!-- *****************Certifications***************** -->
   </section>
   <section id="Certifications">
     <h2>Certifications</h2>
@@ -478,7 +496,7 @@
 
     </div>
 
-<!-- *****************Contact Me***************** -->
+    <!-- *****************Contact Me***************** -->
   </section>
   <section id="Contact_Me">
     <h2>Contact Me</h2>
@@ -488,4 +506,5 @@
 </body>
 <!-- End of Body Section -->
 <!-- ************************************************************************************************************************************************************************************************ -->
+
 </html>
