--- a/index.html
+++ b/index.html
@@ -23,10 +23,22 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mina&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Mina&display=swap" rel="stylesheet"> -->
+  <!-- line1 -->
   <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+  <!-- line2 -->
   <link href="https://fonts.googleapis.com/css2?family=Mali:wght@300&display=swap" rel="stylesheet">
+  <!-- line3 -->
   <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+  <!-- Profile Title -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
+  <!-- Profile Details 1 -->
+  <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Profile Summary -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300&display=swap" rel="stylesheet">
+  <!-- Skills Overview elements -->
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;500;700&display=swap" rel="stylesheet">
 
   <!-- Local Bootstrap Link -->
   <!-- <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css" /> -->
@@ -49,121 +61,138 @@
 <body>
   <!-- *****************Navigation Bar***************** -->
   <section id="Navigation_Bar">
-    <div class="nvg_bar">
+    <div class="container-fluid nvg_bar">
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid brandName">
+        <!-- <div class="brandName">
           <a class="navbar-brand" href="#">
             Nikhil M N
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navElement" aria-current="page" href="#Skills_Overview">Skills Overview</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navElement" aria-current="page" href="#Professional_Experience">Professional Experience</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#Internships">Internships</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#Skills">Skills</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#Education">Education</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#Academic_Projects">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#Certifications">Certifications</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navElement" href="#Additional_Info">Additional Info</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navElement" href="#Contact_Me">Contact me</a>
-              </li>
+          </a> -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Profile">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navElement" aria-current="page" href="#Skills_Overview">Skills Overview</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navElement" aria-current="page" href="#Professional_Experience">Professional Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#Internships">Internships</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Skills">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Education">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Academic_Projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#Certifications">Certifications</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navElement" href="#Additional_Info">Additional Info</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link navElement" href="#Contact_Me">Contact me</a>
+            </li>
 
-            </ul>
-          </div>
+          </ul>
         </div>
+        <!-- </div> -->
       </nav>
     </div>
-    <div class="nvg_body">
-      <div class="nvg_body_img">
-        <img src="" alt="">
+    <div class="row nvg_body">
+      <div class="col-lg-6 nvg_body_img">
+        <img class="myPic" src="my_pic2.jpg" alt="">
       </div>
-      <div class="nvg_body_txt">
-        <span class="line1">
+      <div class="col-lg-6 nvg_body_txt">
+        <div class="line1">
           Hey, I'm
-        </span>
-        <span class="line2">
+        </div>
+        <div class="line2">
           Nikhil M N
-        </span>
-        <span class="line3">
+        </div>
+        <div class="line3">
           I am a full-stack Developer
-        </span>
-        <span>
-          <!-- <img class="myPic" src="my_pic.jpg" alt=""> -->
+        </div>
+        <!-- <span>
+          <img class="myPic" src="my_pic.jpg" alt="">
           <img class="myPic" src="my_pic2.jpg" alt="">
-        </span>
+        </span> -->
       </div>
     </div>
   </section>
   <!-- *****************Profile***************** -->
   <section id="Profile">
-    <div class="profile_title">
-      <h2>Profile</h2>
+    <div class="profile_title title">
+      <p>Profile</p>
     </div>
-    <div class="profile_summary">
-      <p>I have a good Knowledge on Web Designing. I am familiar with various Programming Languages like Java, Python, C#, JavaScript, C++ etc.
-        I have Worked on different development IDEs like Eclipse, Pycharm, Intelliji, Visual Studio Code, Atom, Geany etc.
-        I am familiar with different browsers and usage of GIT.
-        I am also knowledgeble in SQL.
-      </p>
+    <div class="row">
+      <div class="col-lg-6 col-md-12 profile_details">
+        <div class="profile_details_sub">
+          <p>Name: <span class="profile_details2"> Nikhil M N</span></p>
+
+          <p>Age:<span class="profile_details2">24</span></p>
+
+          <p>Location:<span class="profile_details2">Bangalore</span></p>
+        </div>
+      </div>
+
+      <div class="col-lg-6 col-md-12 profile_summary">
+        <div class="profile_summary_sub">
+          <p>I have a good Knowledge on Web Designing. I am familiar with various Programming Languages like Java, Python, C#, JavaScript, C++ etc.
+            I have Worked on different development IDEs like Eclipse, Pycharm, Intelliji, Visual Studio Code, Atom, Geany etc.
+            I am familiar with different browsers and usage of GIT.
+            I am also knowledgeble in SQL.
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="profile_img">
-      <img src="" alt="">
-    </div>
-    <div class="profile_details">
-      <h6>Name:</h6>
-      <span>Nikhil M N</span>
-      <h6>Age:</h6>
-      <span>24</span>
-      <h6>Location:</h6>
-      <span>Bangalore</span>
-    </div>
+
   </section>
   <!-- *****************Skills Overview***************** -->
   <section id="Skills_Overview">
-    <div class="Skills_Overview_div">
-      <h2>Skills Overview </h2>
-      <div class="Skills_Overview_element">
-        <i class="fa-solid fa-window-maximize"></i>
-        <h5>Web Development</h5>
+    <p class="title">Skills Overview </p>
+    <div class="row Skills_Overview_div">
+      <div class="col-lg-4 col-md-12 ">
+        <i class="fa-solid fa-window-maximize Skills_Overview_img"></i>
+        <h5 class="Skills_Overview_element">Web Development</h5>
+        <p>HTML 5, CSS, JavaScript, Bootstrap 5, JQuery, NodeJS, EJS </p>
       </div>
-      <div class="Programming">
-        <i class="fa-solid fa-laptop-code"></i>
-        <h5>Programming</h5>
+      <div class="col-lg-4 col-md-12 ">
+        <i class="fa-solid fa-laptop-code Skills_Overview_img"></i>
+        <h5 class="Skills_Overview_element">Programming</h5>
+        <p>Python, Java, C#, C++ programming</p>
       </div>
-      <div class="Database">
-        <i class="fa-solid fa-database"></i>
-        <h5>Database</h5>
+      <div class="col-lg-4 col-md-12 ">
+        <i class="fa-solid fa-database Skills_Overview_img"></i>
+        <h5 class="Skills_Overview_element">Database</h5>
+        <p>MySQL, MongoDB</p>
       </div>
-      <div class="Cloud">
-        <i class="fa-solid fa-cloud"></i>
-        <h5>Cloud</h5>
+      <div class="col-lg-4 col-md-12 ">
+        <i class="fa-solid fa-cloud Skills_Overview_img"></i>
+        <h5 class="Skills_Overview_element">Cloud</h5>
+        <p>Microsoft Azure</p>
       </div>
-      <div class="Testing">
-        <i class="fa-solid fa-screwdriver-wrench"></i>
-        <h5>Testing</h5>
+      <div class="col-lg-4 col-md-12 ">
+        <i class="fa-solid fa-screwdriver-wrench Skills_Overview_img"></i>
+        <h5 class="Skills_Overview_element">Testing</h5>
+        <p>ISQTB Fundamentals, Java Selenium, C# Selenium, Python Selenium, Cucumber BDD, TestNG, Maven, Jenkin</p>
+      </div>
+      <div class="col-lg-4 col-md-12 ">
+        <i class="fa-solid fa-tags Skills_Overview_img"></i>
+        <h5 class="Skills_Overview_element">Others</h5>
+        <p>Familiar with Git, different Development Environments, Operating Systems and Browsers</p>
       </div>
     </div>
   </section>
@@ -171,7 +200,7 @@
   <!-- *****************Professional Experience***************** -->
   <section id="Professional_Experience">
     <div class="Professional_Experience_div">
-      <h2>Professional Experience</h2>
+      <p class="title">Professional Experience</p>
       <h3>Qualitest India Pvt Ltd | Siemens Healthineers Private Limited</h3>
       <h4>Software Developer</h4>
       <h6>August 2021 - Current | Bangalore</h6>
@@ -187,7 +216,7 @@
   <!-- *****************Internships******************** -->
   <section id="Internships">
     <div class="Internships_div">
-      <h2>Internships</h2>
+      <p class="title">Internships</p>
       <h3>Advanced Digital Switching Systems and Optical Fiber Communication</h3>
       <h4>BSNL, RTTC | Mysore</h4>
       <ul><span>Key Learnings</span>
@@ -207,7 +236,7 @@
   <!--*****************Skills*****************  -->
   <section id="Skills">
     <div>
-      <h2>Skills</h2>
+      <p class="title">Skills</p>
       <ul class="skills_table_1">
         <li><span class="skill_title"> HTML & CSS</span>
           <span class="skill_score">
@@ -365,7 +394,7 @@
   <!-- *****************Education***************** -->
   <section id="Education">
     <div class="MEng">
-      <h2>Education</h2>
+      <p class="title">Education</p>
       <h2>MEng in Electronics and Computer Engineering, Major in IoT</h2>
       <h4>Dublin City University</h4>
       <h6>2019-2021 | Dublin</h6>
