--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#">MyHome</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#Profile">Profile</a>
@@ -790,7 +790,7 @@
 
   <section id="Contact_Me">
     <section class="container mt-5">
-      <form onsubmit="sendEmail(); reset(); return false;" method="post">
+      <form action="POST" data-netlify="true">
         <div class="row">
           <!--Grid column-->
           <div class="col-sm-12 mb-4 col-lg-8 mx-auto contactMeCardDiv">
