Final Commit : Resume

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <!-- Local Bootstrap Link -->
   <!-- <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css" /> -->
-  <link rel="stylesheet" href="bootstrap-5.2.0-dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="assets/bootstrap-5.2.0-dist/css/bootstrap.css" />
 
   <!-- Local JQuery Link -->
   <!-- <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script> -->
@@ -78,7 +78,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">MyHome</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#Profile">Profile</a>
@@ -121,6 +121,7 @@
         <img class="myPic" src="my_pic2.jpg" alt="">
       </div> -->
       <div class="col-lg-12 nvg_body_txt">
+        <img class="cloudImg1" src="assets/images/cloud.png" alt="">
         <div class="line1">
           Hey, I'm
         </div>
@@ -133,6 +134,7 @@
         <div class="line3">
           I am a full-stack Developer
         </div>
+        <img class="cloudImg2" src="assets/images/cloud.png" alt="">
         <!-- <span>
           <img class="myPic" src="my_pic.jpg" alt="">
           <img class="myPic" src="my_pic2.jpg" alt="">
@@ -175,17 +177,17 @@
       <div class="col-lg-4 col-md-12 ">
         <i class="fa-solid fa-window-maximize Skills_Overview_img"></i>
         <h5 class="Skills_Overview_element">Web Development</h5>
-        <p>HTML 5, CSS, JavaScript, Bootstrap 5, JQuery, NodeJS, EJS </p>
+        <p>HTML 5, CSS, JavaScript, Bootstrap 5, JQuery, NodeJS </p>
       </div>
       <div class="col-lg-4 col-md-12 ">
         <i class="fa-solid fa-laptop-code Skills_Overview_img"></i>
         <h5 class="Skills_Overview_element">Programming</h5>
-        <p>Python, Java, C#, C++ programming</p>
+        <p>Python, Java, C# and C++ programming</p>
       </div>
       <div class="col-lg-4 col-md-12 ">
         <i class="fa-solid fa-database Skills_Overview_img"></i>
         <h5 class="Skills_Overview_element">Database</h5>
-        <p>MySQL, MongoDB</p>
+        <p>MySQL</p>
       </div>
       <!-- <div class="col-lg-4 col-md-12 ">
         <i class="fa-solid fa-cloud Skills_Overview_img"></i>
@@ -200,7 +202,7 @@
       <div class="col-lg-4 col-md-12 ">
         <i class="fa-solid fa-tags Skills_Overview_img"></i>
         <h5 class="Skills_Overview_element">Others</h5>
-        <p>Familiar with Git, different Development Environments, Operating Systems and Browsers</p>
+        <p>Familiar with Git, Development Environments, Operating Systems and Browsers</p>
       </div>
     </div>
   </section>
@@ -341,7 +343,31 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <span class="skill_title"> Python Selenium WebDriver</span>
+                  <span class="skill_title"> Windows OS</span>
+                </div>
+                <div class="col">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <span class="skill_title"> Microsoft Office</span>
+                </div>
+                <div class="col">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <span class="skill_title">GIT</span>
                 </div>
                 <div class="col">
                   <i class="fas fa-star"></i>
@@ -477,6 +503,18 @@
               </div>
               <div class="row">
                 <div class="col">
+                  <span class="skill_title"> Python Selenium WebDriver</span>
+                </div>
+                <div class="col">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
                   <span class="skill_title"> TestNG Framework</span>
                 </div>
                 <div class="col">
@@ -501,7 +539,19 @@
               </div>
               <div class="row">
                 <div class="col">
-                  <span class="skill_title"> EJS</span>
+                  <span class="skill_title"> Linux OS</span>
+                </div>
+                <div class="col">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <span class="skill_title"> Socket Programming</span>
                 </div>
                 <div class="col">
                   <i class="fas fa-star"></i>
@@ -643,7 +693,7 @@
             <p>Sanjay H S, Prithvi B S, Nikhil M N | WSEAS Transactions on Acoustics and Music, Vol 5(1), 20-30</p>
             <div class="d-grid">
               <!-- <button type="button" class="btn btn-lg btn-outline-dark gap-*">Link</button> -->
-              <a href="http://www.wseas.org/multimedia/journals/acoustics/2018/a085919-091.php" class="btn btn-lg btn-outline-dark gap-*">Link</a>
+              <a href="http://www.wseas.org/multimedia/journals/acoustics/2018/a085919-091.php" class="btn btn-lg btn-outline-primary gap-*">Link</a>
             </div>
           </div>
         </div>
@@ -695,7 +745,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\WebDev.webp" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\WebDev.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">The Complete Web Development Bootcamp</p>
           </div>
@@ -703,7 +753,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\python.webp" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\python.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">Learn Python Programming Masterclass</p>
           </div>
@@ -711,7 +761,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\java.webp" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\java.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">The Complete Java Certification Course</p>
           </div>
@@ -719,7 +769,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\MsSql.webp" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\MsSql.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">Microsoft SQL for Beginners</p>
           </div>
@@ -727,7 +777,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\Selenium.avif" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\Selenium.avif" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">Selenium WebDriver with Java -Basics to Advanced+Frameworks</p>
           </div>
@@ -735,7 +785,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\bootstrap5.jpg" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\bootstrap5.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">BootStrap 5 & jQuery</p>
           </div>
@@ -743,7 +793,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\git.png" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\git.png" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">git and GitHub for beginners</p>
           </div>
@@ -751,7 +801,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\linux.webp" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\linux.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">Linux for beginners</p>
           </div>
@@ -759,7 +809,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\SocketProgramming.jpg" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\SocketProgramming.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">Socket Programming</p>
           </div>
@@ -767,7 +817,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\Computer_vision.jpg" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\Computer_vision.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">Computer Vision with Python</p>
           </div>
@@ -775,7 +825,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="card courseCard" style="width: 18rem;">
-          <img src="Courses_Cards\c++.png" class="card-img-top" alt="...">
+          <img src="assets\Courses_Cards\c++.png" class="card-img-top" alt="...">
           <div class="card-body">
             <p class="card-text">C++ Programming Bootcamp</p>
           </div>
@@ -814,22 +864,22 @@
                     <div class="form-group">
                       <label>Your email</label>
                       <div class="input-group mb-2 mb-sm-0">
-                        <input type="email" value="" name="email" class="form-control" id="inlineFormInputGroupUsername" placeholder="Email">
+                        <input type="email" value="" name="email" class="form-control" id="inlineFormInputGroupUsername" placeholder="Email" required>
                       </div>
                     </div>
                     <div class="form-group">
                       <label>Message</label>
                       <div class="input-group mb-2 mb-sm-0">
-                        <input type="text" class="form-control" name="mesg">
+                        <input type="textfield" class="form-control textField" name="mesg" placeholder="Some Message Would Be Helpful!">
                       </div>
-                  </div>
+                    </div>
 
-                </div>
-                <div class="col-md-6">
-                  <div class="mb-4 contactMeImgDiv">
-                    <img class="contactMeImg" src="my_pic.jpg" aria-hidden="false" tabindex="0" alt="...">
                   </div>
-                </div>
+                  <div class="col-md-6">
+                    <div class="mb-4 contactMeImgDiv">
+                      <img class="contactMeImg" src="assets/images/my_pic.jpg" aria-hidden="false" tabindex="0" alt="...">
+                    </div>
+                  </div>
 
 
                 </div>
@@ -849,46 +899,45 @@
 
   </section>
 
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <!-- <script src="https://smtpjs.com/v3/smtp.js"></script>
   <script>
-  function sendEmail(){
-    Email.send({
-    Host : "smtp.gmail.com",
-    Username : "nikhil.mn.resume@gmail.com",
-    Password : "Nikhil@1234",
-    To : 'nikhilmn01@gmail.com',
-    From : document.getElementById("email").value,
-    Subject : "New content from resume website",
-    Body : "And this is the body"
-}).then(
-  message => alert(message)
-);
-  }
-
-  </script>
+    function sendEmail() {
+      Email.send({
+        Host: "smtp.gmail.com",
+        Username: "nikhil.mn.resume@gmail.com",
+        Password: "Nikhil@1234",
+        To: 'nikhilmn01@gmail.com',
+        From: document.getElementById("email").value,
+        Subject: "New content from resume website",
+        Body: "And this is the body"
+      }).then(
+        message => alert(message)
+      );
+    }
+  </script> -->
 
   <footer class="section bg-footer">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-4 mx-left">
-                      <div class="">
-                          <h6 class="footer-heading text-uppercase text-white">Contact Info</h6>
-                          <p class="contact-info mt-4">Please feel free to contact me for further queries</p>
-                          <p class="contact-info">+91 8892535763</p>
-                        <p class="contact-info">nikhilmn123n@gmail.com</p>
-                          <div class="mt-5">
-                              <ul class="list-inline">
-                                  <li class="list-inline-item"><a href="https://www.facebook.com/nikhil.mn.39"><i class="fab facebook footer-social-icon fa-facebook-f"></i></i></a></li>
-                                  <li class="list-inline-item"><a href="https://www.instagram.com/nikhilmn01/"><i class="fab instagram footer-social-icon fa-brands fa-instagram"></i></i></a></li>
-                                  <li class="list-inline-item"><a href="https://www.linkedin.com/in/nikhil-m-n-68751b168"><i class="fab linkedIn footer-social-icon fa-brands fa-linkedin"></i></i></a></li>
-                              </ul>
-                          </div>
-                      </div>
-                  </div>
-
-              </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 mx-left">
+          <div class="">
+            <h6 class="footer-heading text-uppercase text-white">Contact Info</h6>
+            <p class="contact-info mt-4">Please feel free to contact me for further queries</p>
+            <p class="contact-info">+91 8892535763</p>
+            <p class="contact-info">nikhilmn123n@gmail.com</p>
+            <div class="mt-5">
+              <ul class="list-inline">
+                <li class="list-inline-item"><a href="https://www.facebook.com/nikhil.mn.39"><i class="fab facebook footer-social-icon fa-facebook-f"></i></i></a></li>
+                <li class="list-inline-item"><a href="https://www.instagram.com/nikhilmn01/"><i class="fab instagram footer-social-icon fa-brands fa-instagram"></i></i></a></li>
+                <li class="list-inline-item"><a href="https://www.linkedin.com/in/nikhil-m-n-68751b168"><i class="fab linkedIn footer-social-icon fa-brands fa-linkedin"></i></i></a></li>
+              </ul>
+            </div>
           </div>
-      </footer>
+        </div>
+
+      </div>
+    </div>
+  </footer>
 
 </body>
 <!-- End of Body Section -->
