--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <li>Automation Testing of a multi-functional booking website</li>
                 <li>Development of automation scripts for various test cases without the use of user interface </li>
                 <li>Involved in development and improvisation of the tools used in the application </li>
-                <li>Got and idea about how the functionalities can be improved and altered, so that the application is improvised and compatible</li>
+                <li>Got an idea about how the functionalities can be improved and altered, so that the application is improvised and compatible</li>
               </ul>
             </div>
           </div>
