--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
       <div class="col-lg-6 col-md-12 profile_summary">
         <div class="profile_summary_sub">
-          <p>I have a good Knowledge on Web Designing. I am familiar with various Programming Languages like Java, Python, C#, JavaScript, C++ etc.
+          <p>I am a dedicated and efficient full stack developer. I am familiar with various Programming Languages like Java, Python, C#, JavaScript, C++ etc.
             I have Worked on different development IDEs like Eclipse, Pycharm, Intelliji, Visual Studio Code, Atom, Geany etc.
             I am familiar with different browsers and usage of GIT.
             I am also knowledgeble in SQL.
