--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
 
       <div class="col-lg-6 col-md-12 profile_summary">
         <div class="profile_summary_sub">
-          <p>I am a dedicated and efficient full stack developer. I am familiar with various Programming Languages like Java, Python, C#, JavaScript, C++ etc.
-            I have Worked on different development IDEs like Eclipse, Pycharm, Intelliji, Visual Studio Code, Atom, Geany etc.
-            I am familiar with different browsers and usage of GIT.
-            I am also knowledgeble in SQL.
+          <p>I am a dedicated and efficient full stack developer, seeking to excel my career in a globally recognized organization and
+            to upgrade and utilize my skills and abilities for the organization that offers professional growth,
+            new challenges and opportunities to learn new skills while being resourceful, innovative and flexible to the organization.
+            I have a Good working knowledge of C#, Java and Python Programming.
           </p>
         </div>
       </div>
